Add so that document settings can be created through API
