# serverless/swagger.yaml
@@ -2,13 +2,341 @@ openapi: 3.0.0
 info:
   title: Natural Input
   version: "1.0.0-oas3"
-tags:
-  - name: document
-    description: Everything about your document
-    externalDocs:
-      description: Find out more
-      url: 'http://swagger.io'
+
 paths:
+  /documentSetting:
+    post:
+      tags:
+        - documentSetting
+      summary: Create document with identifier generated by server
+      operationId: createDocumentSetting
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Document not found
+        '405':
+          description: Validation exception
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        uri: >-
+          arn:aws:apigateway:ap-southeast-1:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-1:113274499007:function:InputFunction/invocations
+      requestBody:
+        $ref: '#/components/requestBodies/DocumentSetting'
+    get:
+      tags:
+        - documentSetting
+      summary: Get all documents
+      operationId: getDocumentSettings
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Document not found
+        '405':
+          description: Validation exception
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        uri: >-
+          arn:aws:apigateway:ap-southeast-1:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-1:113274499007:function:InputFunction/invocations
+  '/documentSetting/{identifier}':
+    get:
+      tags:
+        - documentSetting
+      summary: Get document
+      description: Returns a single document
+      operationId: getDocumentSettingById
+      parameters:
+        - name: identifier
+          in: path
+          description: ID of document to return
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DocumentSetting'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Document not found
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        uri: >-
+          arn:aws:apigateway:ap-southeast-1:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-1:113274499007:function:InputFunction/invocations
+    put:
+      tags:
+        - documentSetting
+      summary: Update or create document
+      description: Update or create document
+      operationId: updateDocumentSetting
+      parameters:
+        - name: identifier
+          in: path
+          description: ID of document to return
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DocumentSetting'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Document not found
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        uri: >-
+          arn:aws:apigateway:ap-southeast-1:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-1:113274499007:function:InputFunction/invocations
+  
+  '/pageSetting/':
+    post:
+      tags:
+        - pageSetting
+      summary: Update an existing page
+      operationId: createPageSetting
+      parameters:
+        - name: id
+          in: path
+          description: Page address
+          required: true
+          schema:
+            type: string
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Page not found
+        '405':
+          description: Validation exception
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        uri: >-
+          arn:aws:apigateway:ap-southeast-1:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-1:113274499007:function:InputFunction/invocations
+      requestBody:
+        $ref: '#/components/requestBodies/PageSetting'
+
+
+  '/pageSetting/{id}':
+    get:
+      tags:
+        - pageSetting
+      summary: Get an existing page
+      operationId: getPageSettingById
+      parameters:
+        - name: id
+          in: path
+          description: Page address
+          required: true
+          schema:
+            type: string
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Page not found
+        '405':
+          description: Validation exception
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        uri: >-
+          arn:aws:apigateway:ap-southeast-1:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-1:113274499007:function:InputFunction/invocations
+
+    put:
+      tags:
+        - pageSetting
+      summary: Update an existing page
+      operationId: updatePageSettingById
+      parameters:
+        - name: id
+          in: path
+          description: Page address
+          required: true
+          schema:
+            type: string
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Page not found
+        '405':
+          description: Validation exception
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        uri: >-
+          arn:aws:apigateway:ap-southeast-1:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-1:113274499007:function:InputFunction/invocations
+      requestBody:
+        $ref: '#/components/requestBodies/PageSetting'
+
+  '/fieldSetting/':
+    post:
+      tags:
+        - fieldSetting
+      summary: Update
+      operationId: createFieldSetting
+      parameters:
+        - name: id
+          in: path
+          description: Id
+          required: true
+          schema:
+            type: string
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Page not found
+        '405':
+          description: Validation exception
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        uri: >-
+          arn:aws:apigateway:ap-southeast-1:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-1:113274499007:function:InputFunction/invocations
+
+  '/fieldSetting/{id}':
+    get:
+      tags:
+        - fieldSetting
+      summary: Get
+      operationId: getFieldSettingById
+      parameters:
+        - name: id
+          in: path
+          description: Field id
+          required: true
+          schema:
+            type: string
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Page not found
+        '405':
+          description: Validation exception
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        uri: >-
+          arn:aws:apigateway:ap-southeast-1:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-1:113274499007:function:InputFunction/invocations
+
+    put:
+      tags:
+        - fieldSetting
+      summary: Update
+      operationId: updateFieldSettingById
+      parameters:
+        - name: id
+          in: path
+          description: Page address
+          required: true
+          schema:
+            type: string
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Page not found
+        '405':
+          description: Validation exception
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        uri: >-
+          arn:aws:apigateway:ap-southeast-1:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-1:113274499007:function:InputFunction/invocations
+
+  '/recognitionSetting/':
+    post:
+      tags:
+        - recognitionSetting
+      summary: Update
+      operationId: createrecognitionSetting
+      parameters:
+        - name: id
+          in: path
+          description: Id
+          required: true
+          schema:
+            type: string
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Page not found
+        '405':
+          description: Validation exception
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        uri: >-
+          arn:aws:apigateway:ap-southeast-1:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-1:113274499007:function:InputFunction/invocations
+
+  '/recognitionSetting/{id}':
+    get:
+      tags:
+        - recognitionSetting
+      summary: Get
+      operationId: getRecognitionSettingById
+      parameters:
+        - name: id
+          in: path
+          description: Field id
+          required: true
+          schema:
+            type: string
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Page not found
+        '405':
+          description: Validation exception
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        uri: >-
+          arn:aws:apigateway:ap-southeast-1:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-1:113274499007:function:InputFunction/invocations
+
+    put:
+      tags:
+        - recognitionSetting
+      summary: Update
+      operationId: updateRecognitionSettingById
+      parameters:
+        - name: id
+          in: path
+          description: id
+          required: true
+          schema:
+            type: string
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Page not found
+        '405':
+          description: Validation exception
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        uri: >-
+          arn:aws:apigateway:ap-southeast-1:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-1:113274499007:function:InputFunction/invocations
+
   /document:
     post:
       tags:
@@ -232,6 +560,83 @@ paths:
       requestBody:
         $ref: '#/components/requestBodies/Page'
 
+  '/field/':
+    post:
+      tags:
+        - field
+      summary: Update
+      operationId: createField
+      parameters:
+        - name: id
+          in: path
+          description: Id
+          required: true
+          schema:
+            type: string
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Page not found
+        '405':
+          description: Validation exception
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        uri: >-
+          arn:aws:apigateway:ap-southeast-1:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-1:113274499007:function:InputFunction/invocations
+
+  '/field/{id}':
+    get:
+      tags:
+        - field
+      summary: Get
+      operationId: getFieldById
+      parameters:
+        - name: id
+          in: path
+          description: Field id
+          required: true
+          schema:
+            type: string
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Page not found
+        '405':
+          description: Validation exception
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        uri: >-
+          arn:aws:apigateway:ap-southeast-1:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-1:113274499007:function:InputFunction/invocations
+
+    put:
+      tags:
+        - field
+      summary: Update
+      operationId: updateFieldById
+      parameters:
+        - name: id
+          in: path
+          description: Id
+          required: true
+          schema:
+            type: string
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Page not found
+        '405':
+          description: Validation exception
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        uri: >-
+          arn:aws:apigateway:ap-southeast-1:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-southeast-1:113274499007:function:InputFunction/invocations
+
   '/page/{address}/background':
     put:
       tags:
@@ -439,6 +844,21 @@ servers:
   - url: 'http://virtserver.swaggerhub.com/formidableservices/naturalinput/1.0.0'
 components:
   requestBodies:
+    PageSetting:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/PageSetting'
+      description: Page object that needs to be added to Document.
+      required: true
+    DocumentSetting:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/DocumentSetting'
+      description: Document object that needs to be added to the store
+      required: true
+  
     Page:
       content:
         application/json:
@@ -453,12 +873,35 @@ components:
             $ref: '#/components/schemas/Document'
       description: Document object that needs to be added to the store
       required: true
+      
+
   schemas:
-    Document:
+    DocumentSetting:
       type: object
       required:
         - name
-        - photoUrls
+      properties:
+        identifier:
+          type: string
+        pages:
+          type: array
+          items:
+            $ref: '#/components/schemas/PageSetting'
+        name:
+          type: string
+    PageSetting:
+      type: object
+      properties:
+        address:
+          type: string
+        number:
+          type: integer
+          format: int32
+
+    Document:
+      type: object
+      required:
+        - identifier
       properties:
         identifier:
           type: string
